[project]
name = "workflow-notifications"
version = "0.1.0"
description = "Internal workflow reminder system"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pydantic-settings>=2.4",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.0",
  "itsdangerous>=2.2",
  "email-validator>=2.2",
  "python-dateutil>=2.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]